# so-projekt

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  TESTS.md  common.h  ipcutils.h  logger.h  main.cpp  report.h
dyrektor/: clock.cpp  clock.h  dyrektor.cpp  dyrektor.h  process.cpp  process.h
kasa/: kasa.cpp  kasa.h
petent/: dziecko.cpp  dziecko.h  generator.cpp  generator.h  petent.cpp  petent.h
rejestracja/: rejestracja.cpp  rejestracja.h
tests/: lib.sh  run_all.sh  test1_standard_day.sh  test2_limits.sh  test3_sigusr1_urzednik.sh  test4_sigusr2_evacuation.sh
urzednik/: urzednik.cpp  urzednik.h
